--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: [lint, release-please]
+    needs: [release-please]
     if: needs.release-please.outputs.release_created
     steps:
       - uses: actions/checkout@v3
