--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,18 @@ name: CI
 on: [push]
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.1
+      - name: Install dependencies
+        run: bundle install
+      - name: Run linter
+        run: bundle exec rubocop
+
   release-please:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/master'
@@ -17,7 +29,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: [release-please]
+    needs: [lint, release-please]
     if: needs.release-please.outputs.release_created
     steps:
       - uses: actions/checkout@v3
