--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.1
+          ruby-version: 3.4.1
       - name: Install dependencies
         run: bundle install
       - name: Run linter
@@ -30,13 +30,13 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: [lint, release-please]
-    if: needs.release-please.outputs.release_created
+    if: ${{ needs.release-please.outputs.release_created }}
     steps:
       - uses: actions/checkout@v3
       - name: Set up Ruby
-        uses: actions/setup-ruby@v1
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.1
+          ruby-version: 3.4.1
       - name: Export version from tag name
         run: echo "${{ needs.release-please.outputs.version }}" > VERSION
       - name: Build Gem
